style.css
/* ... */
.locationInput:focus {
    width: 100%;
    cursor: auto;
}
.searchButton{
    border-radius: 10%;
    width: 100%;
    max-width: 6vmin;
    background-color: #38a2b8;
    background-image: url('images/searchicon.png');
    background-position: 5% 38%;
    background-repeat: no-repeat;
    background-size: 100%;
    cursor: pointer;
}
.searchButton:hover{
    transform: scale(1.1);
}
.searchButton:active{
    transform: scale(.98);
}
/*DataPage*/                        /*ENTIRE PAGE HERE*/
.dataPageContainer{
    /*border: 2px solid red;*/
    position: absolute;
    height: 100vh;
    width: 100vw;
    /*background: linear-gradient(120deg, #ece837, #ec8c53);*/
    /*background-image: url("images/infoBeachImage.jpg");*/
    animation-name: fadeOutBottom;
    animation-duration: .7s;
    transition-timing-function: ease-in;
    background-image: url("https://wonderopolis.org/wp-content/uploads/2014/07/dreamstime_xl_22656707-custom.jpg");
    background-size: cover;
    visibility: hidden;
    /*z-index: 100;*/
}
.dataPageContainer.visible{
    /*border: 2px solid red;*/
    position: absolute;
    height: 100vh;
    width: 100vw;
    /*background: linear-gradient(120deg, #ece837, #ec8c53);*/
    /*background-image: url("images/infoBeachImage.jpg");*/
    background-image: url("https://wonderopolis.org/wp-content/uploads/2014/07/dreamstime_xl_22656707-custom.jpg");
    background-size: cover;
    animation-name: fadeInRight;
    animation-duration: .7s;
    transition-timing-function: ease-in;
    z-index: 10;
    visibility: visible;
}
.dataPageContainer.hidden{
    position: absolute;
    height: 100vh;
    width: 100vw;
    animation-name: fadeOutBottom;
    animation-duration: .7s;
    transition-timing-function: linear;
    background-image: url("https://wonderopolis.org/wp-content/uploads/2014/07/dreamstime_xl_22656707-custom.jpg");
    background-size: cover;
    visibility: hidden;
    z-index: 10;
}
.headerContainer {
    /*border: 1px solid black;*/
    display: flex;
    justify-content: space-around;
    width: 100%;
    height: 15%;
}
.mainTitle {
    text-align: center;
    height: 100%;
    font-family: 'Concert One', cursive;
}
h1 {
    font-size: 4vmin;
    margin-top: 4px;
}
h2 {
    font-size: 3vmin;
    margin-top: 10px;
}

.newSearchContainer{
    display: block;
    margin-top: 3%;
}

.newSearchButton{
    font-size: 2.5vmin;
    padding: 6px;
    background-color: black;
    opacity: .15;
    color: white;
    display: inline-block;
    width: 69%;
    border: 1px solid #fff;
    text-align: center;
    outline: none;
    text-decoration: none;
    font-family: Helvetica;
}

.sunrise {
    /*border: 1px solid salmon;*/
    height: 100%;
    width: 8%;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-size: 2.4vmin;
}
.sunImg{
    height: 45%;
    width: 50%;
    /*border: 1px solid red;*/
    background-image: url("images/sun.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 45%;
}
.sunriseTime{
    /*border: 1px solid blue;*/
}
.sunset {
    /*border: 1px solid salmon;*/
    height: 100%;
    width: 8%;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    font-size: 2.4vmin;
}
.moonImg{
    height: 45%;
    width: 50%;
    /*border: 1px solid red;*/
    background-image: url("images/moon.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 45%;
}
.sunsetTime{
    /*border: 1px solid blue;*/
}
.weatherInfoContainer {
    display: flex;
    font-size: 2.3vmin;
    justify-content: space-around;
    height: 16%;
    background-color: rgba(240,255,255,0.3);
    box-shadow: 10px 10px 27px 1px rgba(211,214,214,1);
}
.tempBox {
    /*border: 1px solid black;*/
    height: 88%;
    width: 9%;
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
}
.tempBox:hover{
    transform: scale(1.1);
    /*box-shadow: .01em .01em .01em .01em black;*/
    border-radius: 15%;
    color: #0fb8ae;
    text-shadow: 1px 1px black;
}
.tempBox:active{
    transform: scale(.95);
}
.tempTime{
    /*border: 1px solid purple;*/
}
.tempPic{
    height: 65%;
    width: 60%;
    display: flex;
    justify-content: center;
    /*border: 1px solid green;*/
}
.tempPicImage{
    height: 100%;
    width: 100%;
}
.infoContainer{
    /*border: 3px solid blue;*/
    display: flex;
    justify-content: center;
    align-items: center;
    height: 68%;
}
.tideInfoContainer {
    /*border: 1px solid black;*/
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}
.tideInfoHeader{
    width: 100%;
    height: 10%;
    /*border: 1px solid blue;*/
    text-align: center;
    font-size: 5vmin;
}
.tideInfoDataContainer{
    /*border: 5px solid white;*/
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 90%;
    width: 100%;
}
.tideInfoCategories{
    /* border: 2px solid blue; */
    padding-left: 3%;
    font-size: 3.6vmin;
    height: 90%;
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background-color: rgba(240,255,255,0.3);
    border-radius: 5px;
    /*box-shadow: 10px 10px 71px 0px rgba(0,0,0,0.75);*/
}
.categoryTitle{
    /*border: 3px solid crimson;*/
    height: 16%;
}
.tideInfoData{
    /* border: 2px solid green; */
    padding-left: 3%;
    font-size: 3.6vmin;
    height: 90%;
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background-color: rgba(240,255,255,0.2);
    border-radius: 5px;
    /*box-shadow: 10px 10px 71px 0px rgba(0,0,0,0.75);*/
}
.dataTitle{
    /*border: 3px solid crimson;*/
    height: 16%;
    color: black;
}
/* ... */

